WIP: Move test to separate module for TextIO

--- a/sdks/java/io/pom.xml
+++ b/sdks/java/io/pom.xml
@@ -59,6 +59,7 @@
     <module>mqtt</module>
     <module>redis</module>
     <module>solr</module>
+    <module>text</module>
     <module>tika</module>
     <module>xml</module>
   </modules>
