--- a/sdks/java/io/file-based-io-tests/pom.xml
+++ b/sdks/java/io/file-based-io-tests/pom.xml
@@ -162,7 +162,41 @@
                 </dependency>
             </dependencies>
         </profile>
+        <profile>
+            <!-- Include the hadoop connectivity dependencies activated by -Dfilesystem=hdfs
+            Support for protocol scheme hdfs:// - allow to read/write to HDFS -->
+            <id>hadoop-distributed-file-system</id>
+            <activation>
+                <property>
+                    <name>filesystem</name>
+                    <value>hdfs</value>
+                </property>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>org.apache.beam</groupId>
+                    <artifactId>beam-sdks-java-io-hadoop-file-system</artifactId>
+                    <scope>runtime</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.apache.hadoop</groupId>
+                    <artifactId>hadoop-hdfs</artifactId>
+                    <version>${apache.hadoop.version}</version>
+                    <scope>runtime</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.apache.hadoop</groupId>
+                    <artifactId>hadoop-client</artifactId>
+                    <version>${apache.hadoop.version}</version>
+                    <scope>runtime</scope>
+                </dependency>
+            </dependencies>
+        </profile>
     </profiles>
+
+    <properties>
+        <apache.hadoop.version>2.7.1</apache.hadoop.version>
+    </properties>
 
     <dependencies>
         <dependency>
